--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <title>Amp Guitar</title>
   </head>
+  <link rel=”shortcut icon” href=”public/favicon.ico”>
   <body style=
   "background-color:#294146;
   margin:'0 auto';
